// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SchemaModel edge cases array operations changes array to object 1`] = `
[
  {
    "fieldName": "items",
    "patch": {
      "op": "replace",
      "path": "/properties/items",
      "value": {
        "additionalProperties": false,
        "properties": {},
        "required": [],
        "type": "object",
      },
    },
    "propertyChanges": [],
    "typeChange": {
      "fromType": "array<string>",
      "toType": "object",
    },
  },
]
`;

exports[`SchemaModel edge cases array operations modifies array items type 1`] = `
[
  {
    "fieldName": "items[*]",
    "patch": {
      "op": "replace",
      "path": "/properties/items/items",
      "value": {
        "default": 0,
        "type": "number",
      },
    },
    "propertyChanges": [
      {
        "from": "",
        "property": "default",
        "to": 0,
      },
    ],
    "typeChange": {
      "fromType": "string",
      "toType": "number",
    },
  },
]
`;

exports[`SchemaModel edge cases complex operations handles multiple renames 1`] = `
[
  {
    "fieldName": "givenName",
    "isRename": true,
    "movesIntoArray": undefined,
    "patch": {
      "from": "/properties/name",
      "op": "move",
      "path": "/properties/givenName",
    },
    "propertyChanges": [],
  },
]
`;

exports[`SchemaModel edge cases complex operations handles remove then add same name 1`] = `
[
  {
    "fieldName": "name",
    "patch": {
      "op": "add",
      "path": "/properties/name",
      "value": {
        "default": 0,
        "type": "number",
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "default",
        "to": 0,
      },
    ],
  },
  {
    "fieldName": "name",
    "patch": {
      "op": "remove",
      "path": "/properties/name",
    },
    "propertyChanges": [],
  },
]
`;

exports[`SchemaModel edge cases complex operations handles type change then modification 1`] = `
[
  {
    "fieldName": "name",
    "patch": {
      "op": "replace",
      "path": "/properties/name",
      "value": {
        "default": 42,
        "type": "number",
      },
    },
    "propertyChanges": [
      {
        "from": "",
        "property": "default",
        "to": 42,
      },
    ],
    "typeChange": {
      "fromType": "string",
      "toType": "number",
    },
  },
]
`;

exports[`SchemaModel edge cases multiple changes before save accumulates all changes 1`] = `
[
  {
    "fieldName": "field1",
    "patch": {
      "op": "add",
      "path": "/properties/field1",
      "value": {
        "default": "",
        "type": "string",
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "default",
        "to": "",
      },
    ],
  },
  {
    "fieldName": "field2",
    "patch": {
      "op": "add",
      "path": "/properties/field2",
      "value": {
        "default": 0,
        "type": "number",
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "default",
        "to": 0,
      },
    ],
  },
  {
    "fieldName": "field3",
    "patch": {
      "op": "add",
      "path": "/properties/field3",
      "value": {
        "default": false,
        "type": "boolean",
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "default",
        "to": false,
      },
    ],
  },
]
`;

exports[`SchemaModel edge cases multiple changes before save correctly handles remove after multiple adds 1`] = `
[
  {
    "fieldName": "field2",
    "patch": {
      "op": "add",
      "path": "/properties/field2",
      "value": {
        "default": 0,
        "type": "number",
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "default",
        "to": 0,
      },
    ],
  },
]
`;

exports[`SchemaModel edge cases nested operations adds field to nested object 1`] = `
[
  {
    "fieldName": "user.age",
    "patch": {
      "op": "add",
      "path": "/properties/user/properties/age",
      "value": {
        "default": 0,
        "type": "number",
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "default",
        "to": 0,
      },
    ],
  },
]
`;

exports[`SchemaModel edge cases nested operations removes nested object with children 1`] = `
[
  {
    "fieldName": "user",
    "patch": {
      "op": "remove",
      "path": "/properties/user",
    },
    "propertyChanges": [],
  },
]
`;

exports[`SchemaModel edge cases nested operations renames nested field 1`] = `
[
  {
    "fieldName": "user.givenName",
    "isRename": true,
    "movesIntoArray": undefined,
    "patch": {
      "from": "/properties/user/properties/firstName",
      "op": "move",
      "path": "/properties/user/properties/givenName",
    },
    "propertyChanges": [],
  },
]
`;

exports[`SchemaModel edge cases save and continue editing can modify saved fields 1`] = `
[
  {
    "fieldName": "field",
    "patch": {
      "op": "replace",
      "path": "/properties/field",
      "value": {
        "default": "changed",
        "type": "string",
      },
    },
    "propertyChanges": [
      {
        "from": "",
        "property": "default",
        "to": "changed",
      },
    ],
    "typeChange": undefined,
  },
]
`;

exports[`SchemaModel edge cases save and continue editing tracks new changes after save 1`] = `
[
  {
    "fieldName": "new",
    "patch": {
      "op": "add",
      "path": "/properties/new",
      "value": {
        "default": 0,
        "type": "number",
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "default",
        "to": 0,
      },
    ],
  },
]
`;
